# fht-simulations

./: .gitignore  CITATION.cff  LICENSE  README.md  complex_kahler_manifold.py  depth3_results.md  depth3_simulation.py  fht_5d_simulation.py  fht_6d_simulation.py  fractal_entanglement_2d.py  fractal_kahler_manifold.py  package.json  pyproject.toml  simulation_results_2025-09-08.md  tsconfig.json
.github/workflows/: ci.yml  next.yml
docs/: emergent_physics_results.md  fht_mathematical_frameworks.md  master_fht_compendium.md  simulation_results.md
examples/: emergent_physics_simulation.py  run_entropy_growth.py  run_sierpinski_carpet.py
fht/entropy/: estimators.py
fht/holonomy/: transport.py
fht/math/: groups.py
fht/sim/: runner.py
fht/topology/: fractal_space.py
lib/: chem.ts  nuclear.ts
prisma/: schema.prisma  seed.ts
src/app/: layout.tsx  page.tsx
src/app/api/chem/validate/: route.ts
src/app/api/nuclear/validate/: route.ts
src/app/element/[symbol]/: page.tsx
src/app/nuclear/: page.tsx
src/app/sandbox/: page.tsx
src/lib/: chem.ts  nuclear.ts
tests/: test_entropy.py
